Fix Scrollbar X

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -3,10 +3,10 @@
     background-size: cover;
     background-repeat: no-repeat;    
     background-position: center;
-    height: 100%;
-    width: auto;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
-    padding: 100px 0;
+    padding: 100px 20px;
 }
 
 .about__Title-Container{
@@ -59,6 +59,7 @@
     .about__Text-Container{                
         justify-content: center;
         text-align: center;
+        padding: 40px;        
     } 
     .about__Text{
         font-size: 0.8rem;
