--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,8 @@
 .footer__MainContainer{
     padding: 15px;
     background-color: #171717;
+    width: 100vw;
+    padding: 30px;
 }
 
 .footer__Data-Container{
