--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,5 @@
 .header__MainContainer{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     overflow-y: hidden;
     overflow-x: hidden;    
@@ -40,8 +40,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;    
+    width: 100vw;
+    height: 100vh;    
     background-image: linear-gradient(to top, #000000, #ffffff30);
 }
 
