--- a/src/components/Pilars/pilars.css
+++ b/src/components/Pilars/pilars.css
@@ -3,8 +3,8 @@
     background-size: cover;
     background-repeat: no-repeat;    
     background-position: center;
-    height: 100%;
-    width: auto;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 100px 0;
 }
