--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;    
     background-position: center;
     height: 100%;
-    width: auto;
+    width: 100vw;
     margin: 0;  
     padding: 100px 0;    
 }
